javaDSL/src/test/resources/typeSystemTestModels/valid/classes/ClassInnerTypeNotNamedAsEnclosing.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.valid.classes;

public class ClassInnerTypeNotNamedAsEnclosing {

  public class A {

    public class B {

    }

  }

}
